packages/typ/tests/fixtures/diagnostics/0957_gadt_witness_annotation_mismatch_10.ml
type _ witness_kappa =
  | WInt_kappa : int witness_kappa
  | WBool_kappa : bool witness_kappa

let _ : bool witness_kappa = WInt_kappa
